--- a/client/src/index.css
+++ b/client/src/index.css
@@ -84,3 +84,42 @@ code {
 .hobbyJmbo{
   color: #131313 !important;
 }
+
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  overflow-y: scroll !important;
+  overflow-x: hidden !important;
+  background: 
+  linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+  linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+  linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+  linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+  linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+  linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+  background-color: #131313 !important;
+  background-size: 20px 20px;
+  padding: 15px;
+}
+
+.picture{
+  position: "relative";
+  z-index: -1 ;
+  height: 50%;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.carousel-control-next-icon{
+  color: #131313 !important;
+}
+.carousel-control-prev-icon{
+  color: #131313 !important;
+}
+
+.custom-tag {
+  max-width: 100%;
+  height: 500px;
+
+
+}
