--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,7 +29,8 @@ code {
   color: red;
   background-image : url(https://i.pinimg.com/736x/d8/d4/27/d8d42723be99f121df80b5be991c81e1--light-wood-texture-wood-grain-texture.jpg);
   font-family: cursive;
-  font-size: 14pt
+  font-size: 14pt;
+  padding-bottom: 1rem !important; 
 }
 
 .nav{
@@ -38,6 +39,12 @@ code {
 }
 
 .navbar-brand{
+  font-family: cursive !important;
+  color: red !important;
+  font-size: 22pt !important;
+  
+}
+.modal-title{
   font-family: cursive !important;
   color: red !important;
   font-size: 22pt !important;
@@ -55,6 +62,31 @@ code {
   background-color: #131313 !important;
   background-size: 20px 20px;
   margin-right: 25px
+}
+
+.button2{
+  background: 
+  linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+  linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+  linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+  linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+  linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+  linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+  background-color: #131313 !important;
+  background-size: 20px 20px;
+}
+
+.button3{
+  background: 
+  linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+  linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+  linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+  linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+  linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+  linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+  background-color: #131313 !important;
+  background-size: 20px 20px;
+  margin-top: 10px !important; 
 }
 
 
@@ -85,22 +117,7 @@ code {
   color: #131313 !important;
 }
 
-.carousel-inner {
-  position: relative;
-  width: 100%;
-  overflow-y: scroll !important;
-  overflow-x: hidden !important;
-  background: 
-  linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
-  linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
-  linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
-  linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
-  linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
-  linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
-  background-color: #131313 !important;
-  background-size: 20px 20px;
-  padding: 15px;
-}
+
 
 .picture{
   position: "relative";
@@ -120,6 +137,53 @@ code {
 .custom-tag {
   max-width: 100%;
   height: 500px;
+  width: 100%;
+  position: relative;
+  overflow-y: scroll !important;
+  overflow-x: hidden !important;
+  background: 
+  linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+  linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+  linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+  linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+  linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+  linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+  background-color: #131313 !important;
+  background-size: 20px 20px;
+  padding: 15px;
+}
 
+.footer{
+  position: relative;
+  bottom: 0;
+  color: red;
+  width: 100%;
+  height: 5%;
 
+}
+
+.githubLink{
+  margin: 10px;
+  font-family: cursive;
+}
+
+.githubIcon{
+  height: 24px !important;
+  padding-bottom: 5px;
+}
+
+.spinner{
+  height: 4rem !important;
+  width: 4rem !important;
+  margin: 2rem 2rem 0 2rem;
+
+}
+
+.spinJumbo{
+  padding: 2rem 2rem!important ;
+}
+
+.imageCarousel{
+  max-width: 100%;
+  height: 50%;
 }
