added the reset personality and hobbies logic

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -117,7 +117,9 @@ code {
   color: #131313 !important;
 }
 
-
+.carousel-indicators {
+  position: relative !important;
+}
 
 .picture{
   position: "relative";
